networking/vpc.tf
resource "aws_vpc" "vpc_default" {
  cidr_block           = var.vpc_default_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "${var.project_name} - vpc"
  }
}
